@@ -878,7 +878,9 @@ class Suki_Compatibility_WooCommerce {
 	 */
 	public function modify_theme_breadcrumb_trails( $array ) {
 		if ( is_shop() ) {
-			$array['post_type_archive']['label'] = get_the_title( wc_get_page_id( 'shop' ) );
+			if ( isset( $array['post_type_archive'] ) ) {
+				$array['post_type_archive']['label'] = get_the_title( wc_get_page_id( 'shop' ) );
+			}
 		}
 
 		return $array;
