@@ -36,6 +36,7 @@ $add['color_palette_8'] = $colors['black'];
 $add['breadcrumb_plugin'] = '';
 $add['breadcrumb_trail_home'] = 1;
 $add['breadcrumb_trail_current_page'] = 1;
+$add['breadcrumb_hide_when_only_home_or_current'] = 0;
 
 /**
  * ====================================================
